# virtio-mmio-serial-rtos-to-rtos

./: README.rst  west.yml
device_side/: CMakeLists.txt  prj.conf
device_side/boards/: lpcxpresso55s69_cpu0.conf  lpcxpresso55s69_cpu0.overlay  qemu_cortex_a53.conf  qemu_cortex_a53.overlay
device_side/src/: virtio-mmio-backend-serial.c  virtio-mmio-backend.c  virtio-mmio-backend.h
driver_side_demo/: CMakeLists.txt  custom-sections.ld  prj.conf
driver_side_demo/boards/: lpcxpresso55s69_cpu1.conf  lpcxpresso55s69_cpu1.overlay  qemu_cortex_a53.conf  qemu_cortex_a53.overlay
driver_side_demo/src/: main.c  virtio_mmio_ivshmem.c
